--- a/app/src/main/res/layout/activity_asignatura_pantalla.xml
+++ b/app/src/main/res/layout/activity_asignatura_pantalla.xml
@@ -14,8 +14,8 @@
         android:layout_alignParentTop="true">
          <RelativeLayout
         android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
 
         <TextView
             android:layout_width="wrap_content"
@@ -43,6 +43,13 @@
             android:layout_alignParentEnd="true"
             android:textColor="#757575" />
 
+             <View
+                 android:layout_width="fill_parent"
+                 android:layout_height="0.5dp"
+                 android:background="#757575"
+
+                 android:layout_marginLeft="10dp"
+                 android:layout_below="@+id/textViewAulaAsignatura" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -68,6 +75,12 @@
             android:layout_alignParentStart="true"
             android:layout_alignEnd="@+id/textViewDescripcionAsignatura"
             android:textColor="#757575" />
+             <View
+                 android:layout_width="fill_parent"
+                 android:layout_height="0.5dp"
+                 android:background="#757575"
+                 android:layout_marginLeft="10dp"
+                 android:layout_below="@+id/textViewCreditosAsignatura" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -94,20 +107,27 @@
             android:textSize="18dp"
             android:layout_below="@+id/textView5"
             android:layout_alignParentStart="true" />
-
+             <View
+                 android:layout_width="fill_parent"
+                 android:layout_height="0.5dp"
+                 android:background="#757575"
+                 android:layout_marginLeft="10dp"
+                 android:layout_below="@+id/textViewAulaExamenAsignatura" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Aula donde se imparte"
             android:id="@+id/textViewAulaAsignatura"
-            android:padding="10dp"
             android:textAlignment="center"
             android:textIsSelectable="false"
             android:textSize="15dp"
             android:textColor="#757575"
             android:layout_above="@+id/textView6"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -115,53 +135,61 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="6"
             android:id="@+id/textViewCreditosAsignatura"
-            android:padding="10dp"
             android:textAlignment="center"
             android:textIsSelectable="false"
             android:textSize="15dp"
             android:textColor="#757575"
             android:layout_below="@+id/textViewAulaAsignatura"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Aula de examen"
-            android:id="@+id/textView9"
-            android:padding="10dp"
-            android:textAlignment="center"
-            android:textIsSelectable="false"
-            android:textSize="18dp"
-            android:layout_above="@+id/editText4"
-            android:layout_alignParentStart="true" />
-
-        <TextView
+             <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Aula donde se examina"
             android:id="@+id/textViewAulaExamenAsignatura"
-            android:padding="10dp"
-            android:textAlignment="center"
+                 android:textAlignment="center"
             android:textIsSelectable="false"
             android:textSize="15dp"
             android:textColor="#757575"
             android:layout_below="@+id/textView6"
-            android:layout_alignParentEnd="true" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Fecha de examen"
-            android:id="@+id/textView11"
-            android:padding="10dp"
-            android:textAlignment="center"
-            android:textIsSelectable="false"
-            android:textSize="18dp"
-            android:layout_alignBottom="@+id/textViewFechaExamenAsignatura"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentEnd="true"
+                 android:paddingBottom="10dp"
+                 android:paddingTop="10dp"
+                 android:paddingLeft="10dp" />
+             <View
+                 android:layout_width="fill_parent"
+                 android:layout_height="0.5dp"
+                 android:background="#757575"
+                 android:layout_marginLeft="10dp"
+                 android:layout_below="@+id/textViewFechaExamenAsignatura" />
+             <TextView
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:textAppearance="?android:attr/textAppearanceLarge"
+                 android:text="Aula de examen"
+                 android:id="@+id/textView9"
+                 android:padding="10dp"
+                 android:textAlignment="center"
+                 android:textIsSelectable="false"
+                 android:textSize="18dp"
+                 android:layout_below="@+id/textView11"
+                 android:layout_alignParentStart="true" />
+             <TextView
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:textAppearance="?android:attr/textAppearanceLarge"
+                 android:text="Fecha de examen"
+                 android:id="@+id/textView11"
+                 android:padding="10dp"
+                 android:textAlignment="center"
+                 android:textIsSelectable="false"
+                 android:textSize="18dp"
+                 android:layout_alignTop="@+id/textViewAulaExamenAsignatura"
+                 android:layout_alignParentStart="true" />
 
              <TextView
                  android:layout_width="wrap_content"
@@ -169,64 +197,20 @@
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  android:text="22-01-1994"
                  android:id="@+id/textViewFechaExamenAsignatura"
-                 android:padding="10dp"
                  android:textAlignment="center"
                  android:textIsSelectable="false"
                  android:textSize="15dp"
                  android:textColor="#757575"
-                 android:layout_alignBottom="@+id/editText4"
-                 android:layout_alignParentEnd="true" />
-
-             <EditText
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:id="@+id/editText2"
-                 android:editable="false"
-                 android:focusable="false"
-                 android:clickable="false"
-                 android:layout_alignBaseline="@+id/textViewCreditosAsignatura"
-                 android:layout_alignBottom="@+id/textViewCreditosAsignatura"
-                 android:layout_alignParentStart="true"
-                 android:layout_alignParentEnd="true" />
-
-             <EditText
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:id="@+id/editText3"
-                 android:editable="false"
-                 android:focusable="false"
-                 android:clickable="false"
-                 android:layout_below="@+id/textView6"
-                 android:layout_alignParentStart="true"
-                 android:layout_alignParentEnd="true" />
-
-             <EditText
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:id="@+id/editText"
-                 android:editable="false"
-                 android:clickable="false"
-                 android:focusable="false"
-                 android:layout_alignBottom="@+id/textView5"
-                 android:layout_alignParentStart="true"
-                 android:focusableInTouchMode="false"
+                 android:layout_below="@+id/textView11"
                  android:layout_alignParentEnd="true"
-                 android:autoLink="none"
-                 android:enabled="true" />
+                 android:paddingBottom="10dp"
+                 android:paddingLeft="10dp"
+                 android:paddingTop="10dp" />
 
-             <EditText
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:id="@+id/editText4"
-                 android:editable="false"
-                 android:layout_below="@+id/textViewAulaExamenAsignatura"
-                 android:clickable="false"
-                 android:layout_alignParentStart="true"
-                 android:focusable="false"
-                 android:layout_alignParentEnd="true" />
          </RelativeLayout>
 
     </ScrollView>
+
 
 
 
