--- a/app/src/main/res/layout/profesor.xml
+++ b/app/src/main/res/layout/profesor.xml
@@ -15,25 +15,29 @@
         android:id="@+id/card_viewcarr"
 
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="90dp"
         card_view:cardBackgroundColor="#B3E5FC"
 
         android:shadowColor="#ae010001">
+
+
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            >
         <ImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:src="@drawable/profesor"
             android:layout_marginLeft="10dp"
             android:id="@+id/imagenProfesor"
+            android:scaleType="fitXY"
             android:padding="5dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:scaleType="fitXY" />
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@+id/textViewProfesorID"
+            android:layout_marginBottom="6dp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -42,11 +46,22 @@
 
             android:id="@+id/textViewNombreProfesor"
             android:textColor="#010001"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/imagenProfesor"
-            android:textSize="20dp"
+            android:textSize="19dp"
             android:paddingTop="10dp"
-            android:paddingLeft="15dp" />
+            android:paddingLeft="15dp"
+            android:singleLine="true"
+            android:layout_alignTop="@+id/imagenProfesor"
+            android:layout_toEndOf="@+id/imagenProfesor" />
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:id="@+id/imageView2"
+                android:src="@drawable/correo"
+                android:layout_marginRight="5dp"
+                android:layout_alignBottom="@+id/textViewcorreoProfesor"
+                android:layout_toEndOf="@+id/imagenProfesor"
+                android:layout_marginLeft="15dp"
+                android:layout_marginBottom="2dp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -54,11 +69,12 @@
             android:text="Correo"
 
             android:id="@+id/textViewcorreoProfesor"
+            android:textSize="15dp"
+            android:paddingLeft="5dp"
+            android:paddingTop="6dp"
             android:layout_below="@+id/textViewNombreProfesor"
-            android:layout_alignStart="@+id/textViewNombreProfesor"
-            android:textSize="16dp"
-            android:paddingLeft="15dp"
-            android:paddingTop="2dp" />
+            android:layout_toEndOf="@+id/imageView2"
+            android:textIsSelectable="false" />
 
         <TextView
             android:id="@+id/textViewProfesorID"
@@ -67,7 +83,14 @@
             android:gravity="center"
             android:layout_marginTop="125dp"
             android:text="" />
+
         </RelativeLayout>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="0.4dp"
+            android:background="#757575"
+            android:layout_marginLeft="90dp"
+            android:layout_marginRight="25dp"/>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
