--- a/app/src/main/res/layout/activity_ayuda.xml
+++ b/app/src/main/res/layout/activity_ayuda.xml
@@ -10,13 +10,16 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:weightSum="1">
 
         <ScrollView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/scrollView"
-            android:layout_alignParentTop="true">
+            android:layout_alignParentTop="true"
+            android:fadeScrollbars="false"
+            android:layout_weight="0.9">
             <RelativeLayout
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
@@ -131,7 +134,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/editText"
-            android:layout_alignParentStart="true"
+            android:layout_alignParentStart="false"
             android:hint="¿Qué te gustaría pder hacer/tener en la aplicación?"
             android:textSize="15dp"
             android:layout_below="@+id/checkBox"
@@ -142,21 +145,30 @@
 
     </ScrollView>
 
-        <Button
-            android:layout_width="84dp"
+        <FrameLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/boton_enviar_incidencia"
-            android:id="@+id/button"
-            android:layout_gravity="right"
-            android:layout_marginRight="10dp"
-            android:background="#03A9F4"
-            android:textAlignment="center"
-            android:textColor="#ffffff"
-            android:onClick="EnviarSugerencia"
-            android:layout_alignParentBottom="true"
-            android:layout_alignEnd="@+id/scrollView"
-            android:layout_marginBottom="10dp"
-            android:singleLine="true" />
+            android:layout_weight="0.1">
+
+            <Button
+                android:layout_width="84dp"
+                android:layout_height="wrap_content"
+                android:text="@string/boton_enviar_incidencia"
+                android:id="@+id/button"
+                android:layout_gravity="top|right"
+                android:layout_marginRight="10dp"
+                android:background="#03A9F4"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:onClick="EnviarSugerencia"
+                android:layout_alignParentBottom="true"
+                android:layout_alignEnd="@+id/scrollView"
+                android:layout_marginBottom="10dp"
+                android:singleLine="true"
+                android:layout_alignParentRight="true"
+                android:elegantTextHeight="false" />
+        </FrameLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
