--- a/app/src/main/res/layout-land/activity_ayuda.xml
+++ b/app/src/main/res/layout-land/activity_ayuda.xml
@@ -6,150 +6,160 @@
     android:paddingBottom="10dp"
     tools:context="nemesis.diiscover.ayudanosActivity"
     android:background="#8cd3ff">
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/scrollView"
-        android:layout_alignParentTop="true">
-        <RelativeLayout
-            android:orientation="vertical"
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ScrollView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:id="@+id/scrollView"
+            android:layout_alignParentTop="true"
+            android:fadeScrollbars="false"
+            android:layout_weight="0.9">
+            <RelativeLayout
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Añadir asignaturas a tu perfil"
-        android:id="@+id/checkBox2"
-        android:textSize="15dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:checked="false"
-        android:layout_margin="2dp" />
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Añadir asignaturas a tu perfil"
+            android:id="@+id/checkBox2"
+            android:textSize="15dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_below="@+id/textView2"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:checked="false"
+            android:layout_margin="2dp" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sistema de grupos de prácticas/trabajo"
-        android:id="@+id/checkBox3"
-        android:textSize="15dp"
-        android:layout_below="@+id/checkBox2"
-        android:layout_alignParentStart="true"
-        android:checked="false"
-        android:layout_margin="2dp" />
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sistema de grupos de prácticas/trabajo"
+            android:id="@+id/checkBox3"
+            android:textSize="15dp"
+            android:layout_below="@+id/checkBox2"
+            android:layout_alignParentStart="true"
+            android:checked="false"
+            android:layout_margin="2dp" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Foros en asignaturas"
-        android:id="@+id/checkBox4"
-        android:layout_below="@+id/checkBox3"
-        android:layout_alignParentStart="true"
-        android:layout_margin="2dp"
-        android:checked="false"
-        android:textSize="15dp" />
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Foros en asignaturas"
+            android:id="@+id/checkBox4"
+            android:layout_below="@+id/checkBox3"
+            android:layout_alignParentStart="true"
+            android:layout_margin="2dp"
+            android:checked="false"
+            android:textSize="15dp" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Horario personalizado"
-        android:id="@+id/checkBox5"
-        android:layout_below="@+id/checkBox4"
-        android:layout_alignParentStart="true"
-        android:layout_margin="2dp"
-        android:checked="false"
-        android:textSize="15dp" />
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Horario personalizado"
+            android:id="@+id/checkBox5"
+            android:layout_below="@+id/checkBox4"
+            android:layout_alignParentStart="true"
+            android:layout_margin="2dp"
+            android:checked="false"
+            android:textSize="15dp" />
 
-            <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ayúdanos a mejorar sugiriéndonos que funcionalidades nuevas te gustaría que tuviesen las siguientes versiones. (En la siguiente versión cada uno tendrá su perfil)."
-        android:id="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_margin="10dp"
-        android:textColor="#010101"
-        android:textSize="17dp" />
+                <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ayúdanos a mejorar sugiriéndonos que funcionalidades nuevas te gustaría que tuviesen las siguientes versiones. (En la siguiente versión cada uno tendrá su perfil)."
+            android:id="@+id/textView2"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_margin="10dp"
+            android:textColor="#010101"
+            android:textSize="17dp" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Mensajería propia"
-        android:id="@+id/checkBox"
-        android:checked="false"
-        android:textSize="15dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
-        android:layout_below="@+id/checkBox7"
-        android:layout_alignParentStart="true" />
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mensajería propia"
+            android:id="@+id/checkBox"
+            android:checked="false"
+            android:textSize="15dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_below="@+id/checkBox7"
+            android:layout_alignParentStart="true" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sistema de tareas y notificaciones"
-        android:id="@+id/checkBox6"
-        android:checked="false"
-        android:textSize="15dp"
-        android:layout_below="@+id/checkBox8"
-        android:layout_alignParentStart="true"
-        android:layout_margin="2dp" />
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sistema de tareas y notificaciones"
+            android:id="@+id/checkBox6"
+            android:checked="false"
+            android:textSize="15dp"
+            android:layout_below="@+id/checkBox8"
+            android:layout_alignParentStart="true"
+            android:layout_margin="2dp" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Consultar calendario lectivo"
-        android:id="@+id/checkBox7"
-        android:checked="false"
-        android:textSize="15dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
-        android:layout_below="@+id/checkBox6"
-        android:layout_alignParentStart="true" />
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Consultar calendario lectivo"
+            android:id="@+id/checkBox7"
+            android:checked="false"
+            android:textSize="15dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_below="@+id/checkBox6"
+            android:layout_alignParentStart="true" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Zona de intercambio y venta de conocimientos y/o material"
-        android:id="@+id/checkBox8"
-        android:checked="false"
-        android:textSize="15dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
-        android:layout_below="@+id/checkBox5"
-        android:layout_alignParentStart="true" />
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Zona de intercambio y venta de conocimientos y/o material"
+            android:id="@+id/checkBox8"
+            android:checked="false"
+            android:textSize="15dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_below="@+id/checkBox5"
+            android:layout_alignParentStart="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:layout_alignParentStart="true"
-        android:hint="¿Qué te gustaría pder hacer/tener en la aplicación?"
-        android:textSize="15dp"
-        android:layout_below="@+id/checkBox"
-        android:layout_marginBottom="3dp"
-        android:layout_alignEnd="@+id/checkBox8" />
-        </RelativeLayout>
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText"
+            android:layout_alignParentStart="true"
+            android:hint="¿Qué te gustaría pder hacer/tener en la aplicación?"
+            android:textSize="15dp"
+            android:layout_below="@+id/checkBox"
+            android:layout_marginBottom="3dp"
+            android:layout_alignEnd="@+id/checkBox8" />
+            </RelativeLayout>
 
 
-</ScrollView>
+    </ScrollView>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/boton_enviar_incidencia"
-        android:id="@+id/button"
-        android:layout_gravity="right"
-        android:layout_marginRight="15dp"
-        android:background="#03A9F4"
-        android:textAlignment="center"
-        android:textColor="#ffffff"
-        android:onClick="EnviarSugerencia"
-        android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/scrollView"
-        android:layout_marginBottom="10dp" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/boton_enviar_incidencia"
+            android:id="@+id/button"
+            android:layout_gravity="right"
+            android:layout_marginRight="15dp"
+            android:background="#03A9F4"
+            android:textAlignment="center"
+            android:textColor="#ffffff"
+            android:onClick="EnviarSugerencia"
+            android:layout_alignParentBottom="true"
+            android:layout_alignEnd="@+id/scrollView"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="0.1" />
+    </LinearLayout>
 
 </RelativeLayout>
