--- a/app/src/main/res/layout/activity_laboratorio_pantalla.xml
+++ b/app/src/main/res/layout/activity_laboratorio_pantalla.xml
@@ -4,9 +4,90 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="nemesis.diiscover.laboratorioPantalla">
+    tools:context="nemesis.diiscover.laboratorioPantalla"
+    android:background="#8cd3ff">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/pc" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/textLaboratorio"
+        android:layout_below="@+id/imageView"
+        android:layout_centerHorizontal="true"
+        android:textColor="#010101"
+        android:text="dfghfd"
+        android:textSize="35dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Piso"
+        android:id="@+id/textView4"
+        android:layout_marginTop="54dp"
+        android:layout_below="@+id/textLaboratorio"
+        android:layout_alignParentStart="true"
+        android:textColor="#010101"
+        android:textSize="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Piso no definido"
+        android:id="@+id/textPiso"
+        android:layout_alignBottom="@+id/textView4"
+        android:layout_alignParentEnd="true"
+        android:textSize="20dp" />
+
+    <view
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:id="@+id/view3"
+        android:layout_below="@+id/textPiso"
+        android:background="#757575"
+        android:visibility="visible"
+        android:layout_marginTop="7dp"
+        class="View" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Ordenadores Libres"
+        android:id="@+id/textView8"
+        android:layout_below="@+id/view3"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="15dp"
+        android:textColor="#010101"
+        android:textSize="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Desconocido"
+        android:layout_below="@+id/view3"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="15dp"
+        android:textSize="20dp"
+        android:id="@+id/textPcLibre" />
+
+    <view
+        class="View"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:id="@+id/view4"
+        android:background="#757575"
+        android:visibility="visible"
+        android:layout_below="@+id/textView8"
+        android:layout_marginTop="7dp" />
 </RelativeLayout>
